# basic_kernel_rust

./: .gitignore  Cargo.toml  Makefile  Readme.md  boot.s  linker.ld
.cargo/: config.toml
isodir/boot/: basic_uefi  damos.s
isodir/boot/grub/: grub.cfg
isodir2/boot/grub/: grub.cfg
src/: d_log.rs  main.rs
src/boot/: mod.rs
src/boot/multiboot_v1/: log.rs  mod.rs
src/boot/multiboot_v2/: log.rs  mod.rs
src/io/: mod.rs
src/start/: mod.rs
src/start/x86/: mod.rs
