[package]
name = "basic_kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "basic_kernel"
test = false
bench = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
log = "0.4.28"


[features]
default = ["multiboot_v1","x86"]
multiboot_v1 = []
multiboot_v2 = []
x86 =[]
amd64=[]
